# seerep_benchmarking

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  run_docker.sh
seerep_benchmarking/: CMakeLists.txt  package.xml
seerep_benchmarking/config/: config.json
seerep_benchmarking/include/: analysis.h  message-generation.h  rosbag-HDF5-converter.h
seerep_benchmarking/launch/: rosbag-HDF5-converter.launch
seerep_benchmarking/scripts/: run.py
seerep_benchmarking/src/: analysis.cpp  message-generation.cpp  rosbag-HDF5-converter.cpp
