<?xml version="1.0"?>
<package format="2">
  <name>seerep_benchmarking</name>
  <version>0.0.1</version>
  <description>
    Evaluate performance of MACP against SEEREPs ROS interface
  </description>

  <maintainer email="julian.arkenau@dfki.de">Julian Arkenau</maintainer>

  <license>MIT</license>

  <author email="julian.arkenau@dfki.de">Julian Arkenau</author>

  <depend>seerep_hdf5_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospgky</depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
