<?xml version="1.0"?>
<package format="2">
  <name>seerep_benchmarking</name>
  <version>0.0.2</version>
  <description>
    Evaluate performance of MACP against SEEREPs ROS interface
  </description>

  <maintainer email="mark.niemeyer@dfki.de">Mark Niemeyer</maintainer>

  <license>MIT</license>

  <author email="julian.arkenau@dfki.de">Julian Arkenau</author> 
  <author email="mark.niemeyer@dfki.de">Mark Niemeyer</author>

  <depend>seerep_hdf5_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospgky</depend>
  <depend>rosbag</depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
